--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "jquery": "^2.2.3"
   },
   "devDependencies": {
+    "gulp-cssmin": "^0.1.7",
     "gulp-htmlmin": "^1.3.0",
     "gulp-livereload": "^3.8.1",
+    "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.5.3"
   },
   "scripts": {
