--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "jquery": "^2.2.3"
   },
   "devDependencies": {
+    "babel-preset-es2015": "^6.6.0",
+    "gulp-babel": "^6.1.2",
     "gulp-cssmin": "^0.1.7",
     "gulp-htmlmin": "^1.3.0",
     "gulp-livereload": "^3.8.1",
